--- a/src/ru/neosvet/lesson4/sample.fxml
+++ b/src/ru/neosvet/lesson4/sample.fxml
@@ -1,8 +1,52 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="ru.neosvet.lesson4.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
+
+<?import javafx.scene.control.TextArea?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0"
+            xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.neosvet.lesson4.Controller">
+    <center>
+        <TextArea fx:id="taChat" editable="false"
+                  prefWidth="400.0" prefHeight="360.0"
+                  AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0"
+                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextArea>
+    </center>
+    <bottom>
+        <SplitPane dividerPositions="0.6656891495601173" prefHeight="40.0" prefWidth="400.0"
+                   BorderPane.alignment="CENTER">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="120.0">
+                <TextField fx:id="tfMessage"
+                           promptText="Type a message"
+                           onAction="#sendMessage"
+                           AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0"
+                           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                    <font>
+                        <Font size="20.0"/>
+                    </font>
+                </TextField>
+            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="80.0">
+                <Button mnemonicParsing="false"
+                        onAction="#sendMessage" text="Send"
+                        AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0"
+                        AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+            </AnchorPane>
+        </SplitPane>
+    </bottom>
+</BorderPane>
