--- a/src/ru/neosvet/lesson4/sample.fxml
+++ b/src/ru/neosvet/lesson4/sample.fxml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.Blend?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<?import javafx.scene.control.TextArea?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0"
-            xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.neosvet.lesson4.Controller">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0"
+            fx:controller="ru.neosvet.lesson4.Controller">
     <center>
-        <TextArea fx:id="taChat" editable="false"
-                  prefWidth="400.0" prefHeight="360.0"
-                  AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0"
-                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-            <font>
-                <Font size="20.0" />
-            </font>
-        </TextArea>
+        <SplitPane dividerPositions="0.755" prefHeight="40.0" prefWidth="150.0"
+                   BorderPane.alignment="CENTER">
+            <TextArea fx:id="taChat" editable="false" prefHeight="360.0" prefWidth="450.0"
+                      AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <font>
+                    <Font size="20.0"/>
+                </font>
+            </TextArea>
+            <ListView fx:id="lvUsers" editable="true" prefHeight="360.0" prefWidth="150.0"
+                      BorderPane.alignment="CENTER">
+                <effect>
+                    <Blend/>
+                </effect>
+            </ListView>
+        </SplitPane>
     </center>
     <bottom>
-        <SplitPane dividerPositions="0.6656891495601173" prefHeight="40.0" prefWidth="400.0"
+        <SplitPane dividerPositions="0.755" prefHeight="40.0" prefWidth="150.0"
                    BorderPane.alignment="CENTER">
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="120.0">
-                <TextField fx:id="tfMessage"
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="520.0">
+                <TextField fx:id="tfMessage" onAction="#sendMessage"
+                           prefHeight="38.0" prefWidth="450.0"
                            promptText="Type a message"
-                           onAction="#sendMessage"
-                           AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0"
-                           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <font>
                         <Font size="20.0"/>
                     </font>
                 </TextField>
             </AnchorPane>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="80.0">
-                <Button mnemonicParsing="false"
-                        onAction="#sendMessage" text="Send"
-                        AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0"
-                        AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="38.0" prefWidth="150.0">
+                <Button layoutX="0.0" mnemonicParsing="false" onAction="#sendMessage"
+                        prefHeight="38.0" prefWidth="150.0" text="Send"
+                        AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                        AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
             </AnchorPane>
         </SplitPane>
     </bottom>
